@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright (c) 2009-2020 PrimeTek
+ * Copyright (c) 2009-2021 PrimeTek
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -30,6 +30,7 @@ import java.math.BigInteger;
 import java.net.URLEncoder;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import java.util.Map;
 import javax.el.ValueExpression;
 import javax.faces.FacesException;
@@ -37,7 +38,6 @@ import javax.faces.application.Resource;
 import javax.faces.component.UIComponent;
 import javax.faces.component.UIParameter;
 import javax.faces.context.FacesContext;
-import javax.xml.bind.DatatypeConverter;
 import org.primefaces.application.resource.DynamicContentType;
 import org.primefaces.el.ValueExpressionAnalyzer;
 import org.primefaces.model.StreamedContent;
@@ -65,9 +65,14 @@ public class DynamicContentSrcBuilder {
         }
         else if (value instanceof StreamedContent) {
             StreamedContent streamedContent = (StreamedContent) value;
-            ValueExpression expression = ValueExpressionAnalyzer.getExpression(
-                        context.getELContext(), component.getValueExpression(attributeName));
-            return build(context, streamedContent, component, cache, type, stream, expression);
+
+            ValueExpression ve = null;
+            if (stream && !LangUtils.isValueBlank(attributeName)) {
+                ve = component.getValueExpression(attributeName);
+                ve = ValueExpressionAnalyzer.getExpression(context.getELContext(), ve);
+            }
+
+            return build(context, streamedContent, component, cache, type, stream, ve);
         }
 
         return null;
@@ -124,7 +129,7 @@ public class DynamicContentSrcBuilder {
         }
         else {
             byte[] bytes = toByteArray(streamedContent.getStream());
-            String base64 = DatatypeConverter.printBase64Binary(bytes);
+            String base64 = Base64.getEncoder().withoutPadding().encodeToString(bytes);
             return "data:" + streamedContent.getContentType() + ";base64," + base64;
         }
     }
